<resources>
    <string name="app_name">SmartAlarm</string>
    <string name="add_name">Add Name</string>
    <string name="save_action">Save</string>
    <string name="save_event">Save</string>
    <string name="choose_date">Choose Date</string>
    <string name="upcoming_events"><![CDATA[Upcoming Events >]]></string>
    <string name="actions">Actions</string>
    <string name="createActionImage">createAction</string>
    <string name="createEventImage">createEvent</string>
    <string name="choose_time">Choose Time</string>
    <string name="coffee_action_name">Name</string>
    <string name="water_amount">Water Amount</string>
    <string name="ground_amount">Ground Amount</string>
    <string name="Volume">Alarm Volume</string>
    <string name="Sound">Alarm Sound</string>
    <string name="Vibrate">Vibrate</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>