<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <ImageButton
        android:id="@+id/stopCreateEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/addActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="220dp"
        android:background="#00FFFFFF"
        android:onClick="createAction"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_name"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toBottomOf="@+id/stopCreateEventButton"
        app:layout_constraintEnd_toStartOf="@+id/saveEventButton"
        app:layout_constraintStart_toEndOf="@+id/stopCreateEventButton" />

    <Button
        android:id="@+id/saveEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_rouded_corners_5dp"
        android:onClick="saveAction"
        android:text="@string/save_event"
        app:layout_constraintBaseline_toBaselineOf="@+id/editEventName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editEventDate"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/choose_date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/datetimeImageView"
        app:layout_constraintStart_toEndOf="@+id/datetimeImageView" />

    <EditText
        android:id="@+id/editEventTime"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBaseline_toBaselineOf="@+id/editEventDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editEventDate" />

    <ImageView
        android:id="@+id/datetimeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="73dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopCreateEventButton"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <ImageView
        android:id="@+id/actionConfigurationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="53dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetimeImageView"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="195dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:addStatesFromChildren="false"
        app:layout_constraintBottom_toBottomOf="@+id/actionConfigurationImageView"
        app:layout_constraintStart_toEndOf="@+id/actionConfigurationImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>